--- a/src/BarbarianSim/BarbarianSim.csproj
+++ b/src/BarbarianSim/BarbarianSim.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <StartupObject>HunterSim.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
