--- a/src/BarbarianSim/BarbarianSim.csproj
+++ b/src/BarbarianSim/BarbarianSim.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15" />
     <PackageReference Include="YamlDotNet" Version="13.1.1" />
